# cython-sgutils

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
examples/: inquiry.py
sgutils/: __init__.py  csgutils.pyx  exceptions.py  libsgutils.pxd  structs.py
