[metadata]
name = cython-sgutils
description = Cython-based bindings for libsgutils
url = https://github.com/glucometers-tech/cython-sgutils
license_files =
   AUTHORS
long_description = file:README.md
long_description_content_type: text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
keywords =
    scsi
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
